Update documentation and the docker-compose to read from docker hub

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
         - pgdata:/var/lib/postgresql/data
 
   app:
-    image: optaweb/employee-rostering
+    image: keremk/rostering:latest
     container_name: roster
     ports:
         - 8080:8080
